Prevent scrollbar showing on pages that are smaller than the screen size (#589)
* added one pixel distance from footer to bottom to prevent scrollbar showing

--- a/CTFd/themes/admin/static/css/sticky-footer.css
+++ b/CTFd/themes/admin/static/css/sticky-footer.css
@@ -11,7 +11,7 @@ body {
 
 .footer {
     position: absolute;
-    bottom: 0;
+    bottom: 1px; /* prevent scrollbars from showing on pages that don't use the full page height */
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
